make the number of leaves to promote into a setting

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,7 @@
 
+why did we get rid of header overflow?  if we brought
+it back, maybe we would never need levels to be "desperate".
+
 seems like it should be impossible for a tombstone
 to exist anymore in a main level.  the presence of
 a tombstone there always means need_merge().  but
@@ -24,36 +27,7 @@ well be empty.  it is nice that truly empty leaves
 do not cause any perf problem with open_cursor, but
 a single-leaf segment does have a cost.
 
-allow survivor segment to become empty now that the
-code can handle it
-
 should the level multiplier be stored in the file header?
-
-hmph.  during one of the test runs, commit_merge()
-panicked because the dest segment (Other(N)) was
-obliterated by the promoted stuff (had to be tombstones).
-
-options:
-
-(1)  make sure a segment cannot be depleted.  seems
-hard.
-
-(2)  change header.levels to Option<SegmentHeaderInfo>.
-massive change.
-
-(3)  set the root_page to 0, effectively treating 0
-as None.  still a big change, but without the compiler
-helping to find all the places that need to change.
-
-(4)  remove the segment and move the other levels down.
-this will probably cause the newly moved level(s) to be
-desperate, and a wave of merges back upward will ensue.
-
-(5)  write an empty leaf.  sad.  might this be the
-least bad option?  but this would require a cursor
-that can have First() end up not Valid().  or we
-would need to special case the construction of the
-cursors.
 
 so yeah, it would seem that the blocklist stored for
 the leaf children of a depth 1 parent is only used at
@@ -102,9 +76,6 @@ the multiple consecutive run of the test suite case
 is basically an exercise in managing tombstones.  this
 is probably not a typical workload.
 
-it should be okay to deplete Other(N) if it is the last
-level.
-
 when using Instruments with Separate by Thread, one of the
 merge threads is using a LOT more time than the others.
 Probably Young->Other(0), but not certain.  this would
@@ -140,7 +111,8 @@ the cursor count.  TODO but if we turn this off,
 on the 5M URL test, Other(0) gets huge.  maybe lock
 starvation?
 
-retry the 5M url test with lower level mulitplier
+the 5M url test is still a lot faster when using 2 as the
+level multipler
 
 needs_merge() probably needs some way to account for whether
 reads are happening or not.  if it is purely writes, we have
