--- a/todo.txt
+++ b/todo.txt
@@ -1,35 +1,5 @@
 
-incoming, arriving, new, newborn, lobby, entry, frontdoor, intake, porch, valet, stoop, gate, ingress, threshold,
-grouped, bundled, triage, middle, prep, groomed, foyer,
-main, regular
-
-gate
-lobby
-main
-
-porch
-foyer
-main
-
-lobby
-waiting
-main
-
-lobby
-triage
-main
-
-lobby
-concourse
-main
-
-lobby
-hall
-main
-
-lobby
-
-when promoting into a main level that is empty,
+when promoting into a Regular level that is empty,
 just move without rewrite?
 
 parent node writer gets in trouble, overflows its stack,
@@ -48,9 +18,7 @@ reuse key overflows.
 can varint::read be made faster using transmute for
 some of the cases?
 
-child_pgitem clone
-
-in parent building page, only calc prefix len once
+child_as_item_for_parent clone
 
 so yeah, it would seem that the blocklist stored for
 the leaf children of a depth 1 parent is only used at
@@ -114,19 +82,19 @@ parent with something.  might be nothing.  might be one
 page at the same level.  might be multiple.  might not
 fit anymore.  depth might have changed in the meantime.
 
-why does promoting the only leaf from main 0 cause
+why does promoting the only leaf from Regular 0 cause
 a perf loss?  it seems it would be better to promote
-it so that main 0 could be empty and would therefore
+it so that Regular 0 could be empty and would therefore
 not affect open_cursor.
 
-why does promoting the only leaf from fresh cause
+why does promoting the only leaf from Incoming cause
 a big perf loss?  Young is kept empty.  why is
-there a problem with fresh?
+there a problem with Incoming?
 
 probably answer is that yes, these things should happen,
 but only when nothing else is happening.  don't promote
-the only leaf from main 0 if another one is about to come
-in.  1 leaf in main 0 is a needs merge state but not a
+the only leaf from Regular 0 if another one is about to come
+in.  1 leaf in Regular 0 is a needs merge state but not a
 less urgent one.  like Desperate, but NeedsMergeButNotUrgent.
 
 do we need new_empty() at all?  its main purpose was to
@@ -170,15 +138,15 @@ then we could always know everything that is in use.
 
 segments in waiting?
 
-we could decide that the main levels are always in the
-first 4k page, but fresh and young, which can grow
-arbitrarily large, are elsewhere.  and fresh and young
+we could decide that the Regular levels are always in the
+first 4k page, but Incoming and Waiting, which can grow
+arbitrarily large, are elsewhere.  and Incoming and Waiting
 only have things in them when we haven't had time to
-merge them yet?  which means fresh and young always
+merge them yet?  which means Incoming and Waiting always
 need merge when they are not empty?
 
 seems like it should be impossible for a tombstone
-to exist anymore in a main level.  the presence of
+to exist anymore in a Regular level.  the presence of
 a tombstone there always means need_merge().  but
 if needs_merge() doesn't get called...
 
@@ -197,7 +165,7 @@ that this design will cause most things to get promoted
 to the last level, leaving middle levels empty or
 nearly empty.  not sure if this is a problem or not.
 
-a main middle level which has just a leaf might as
+a Regular middle level which has just a leaf might as
 well be empty.  it is nice that truly empty leaves
 do not cause any perf problem with open_cursor, but
 a single-leaf segment does have a cost.
