--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,11 @@
 
+note that unless we atom-ize, two overflows can
+be identical.
+
+special code to compare two overflows?
+
 eliminate After form of page request?  still would
 make encoding easier.
-
-disallow a pagegroup from asking for more pages
-than it said it wanted
 
 if we're not going to write overflows into leaf
 or parent, we can stop worrying so much about
@@ -14,13 +16,13 @@ group very small.
 
 overflows get tracked like segments.  they have
 their own identity at the top level of the file.
-an overflow whic has been written but not put
+an overflow which has been written but not put
 in the catalog is just like a segment which has
 been writing but not added to a level.
 
 should overflow ids be a monotonically increasing
 int?  or should they be the page num of the first
-page?
+page?  use pagenum.
 
 the notion of desperate doesn't have to be tied to
 the size of the header and whether it fits in a
@@ -49,11 +51,10 @@ for references, both key and value are ints.
 
 new way of dealing with overflows:
 
-should a leaf/parent store enough info to read
-an overflow without consulting the catalog?
-or do we assume that it stores an id, and that
-id needs to be looked up in the catalog to get
-the info necessary to read it, which would include
+leaf/parent stores an overflow id, which is
+actually the first page of the overflow.
+need to look up the rest of the info for that
+id in the overflow catalog.
 the len and maybe the exact sequence of pages.
 
 shifted len flag.  when it's an overflow, the
@@ -82,12 +83,10 @@ we still keep the design that a key overflow must
 be okay to read entirely into ram, but a value
 overflow does not.
 
-and an overflow does not know its length.
-
-but the reference to the overflow does.
-
-and the overflow catalog could know the length
-of each overflow.
+an overflow does not know its length.  or its
+blocklist.  only the catalog knows this.  and
+the reference (in the leaf or parent page) only
+has the id into the catalog.
 
 and the catalog could know whether each overflow is
 a key or a value.
@@ -99,7 +98,7 @@ the 2nd one.
 a page plus offset on that page could be stored
 by shifting and then varint
 
-overflows can be cached too.
+overflows can be cached too?
 
 overflow catalog will need to be stored in a tree of
 some kind.  don't require it to be entirely in ram at
@@ -110,10 +109,6 @@ page number of the overflow is like a key.
 I suppose we could keep the overflow catalog in a
 parallel segment lsm.  as long as that one is never
 going to have overflows.
-
-leaves don't have a full block list for overflows
-anymore.  neither do parents.  just a page num to
-identify the overflow.
 
 and depth 1 parents don't need a block list for the
 leaf child either.
@@ -132,16 +127,6 @@ both directions?
 
 hey.  when a page becomes inactive, all its overflow references
 could automatically go away.
-
-any way we could change the format of overflows to avoid
-needing a header byte and/or page pointer on each page?  
-just have the overflow be the bytes of its value and nothing 
-more, with metadata stored elsewhere.  block list for an
-overflow would need to retain order.  that might be kinda
-bad.
-
-in cases where the overflow length is known (not a stream),
-we could guarantee contiguous pages.  always true for keys.
 
 finding all pages in use (at startup) could be done more
 easily.  walk every segment (without loading each leaf).
