yet another chg to overflows.  now each overflow is stored with a header in front.  the header can support multiple formats, so that overflows can be written as efficiently as possible whether the len is known or not.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 
+need test cases with unknown size overflows
+
 hmmm.  any chance we should keep track of free
 blocks instead of keeping track of used blocks?
 
